--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,15 @@
 </head>
 <body>
     <h1 th:text="List">Recipies</h1>
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>Description</th>
+        </tr>
+        <tr th:each="recipe : ${recipes}">
+            <td th:text="${recipe.id}">id here... 132</td>
+            <td th:text="${recipe.description}">Description here...</td>
+        </tr>
+    </table>
 </body>
 </html>
