--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,16 +37,17 @@
                                 </tr>
                                 </thead>
                                 <tr th:remove="all">
-                                    <td th:text="${recipe.id}">1</td>
-                                    <td th:text="${recipe.description}">Tasty Goodness 1</td>
+                                    <td>1</td>
+                                    <td>Tasty Goodness 1</td>
                                 </tr>
                                 <tr th:remove="all">
-                                    <td th:text="${recipe.id}">2</td>
-                                    <td th:text="${recipe.description}">Tasty Goodness 2</td>
+                                    <td>2</td>
+                                    <td>Tasty Goodness 2</td>
                                 </tr>
                                 <tr th:each="recipe : ${recipes}">
                                     <td th:text="${recipe.id}">3</td>
                                     <td th:text="${recipe.description}">Tasty Goodness 3</td>
+                                    <td><a href="#" th:href="@{'/recipe/show/'+${recipe.id}}">View</a> </td>
                                 </tr>
                             </table>
                         </div>
