--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,6 +45,7 @@
                                     <td>Tasty Goodness 2</td>
                                 </tr>
                                 <tr th:each="recipe : ${recipes}">
+                                    <!--/*@thymesVar id="recipe" type="guru.springframework.domain.Recipe"*/-->
                                     <td th:text="${recipe.id}">3</td>
                                     <td th:text="${recipe.description}">Tasty Goodness 3</td>
                                     <td><a href="#" th:href="@{'/recipe/show/'+${recipe.id}}">View</a> </td>
