--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,6 +19,7 @@
 
 </head>
 <body>
+<!--/*@thymesVar id="recipes" type="java.util.List"*/-->
     <div class="container-fluid" style="margin-top: 20px">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
@@ -34,6 +35,8 @@
                                 <tr>
                                     <th>ID</th>
                                     <th>Description</th>
+                                    <th>View</th>
+                                    <th>Update</th>
                                 </tr>
                                 </thead>
                                 <tr th:remove="all">
@@ -48,7 +51,8 @@
                                 <tr th:each="recipe : ${recipes}">
                                     <td th:text="${recipe.id}">3</td>
                                     <td th:text="${recipe.description}">Tasty Goodness 3</td>
-                                    <td><a href="#" th:href="@{'/recipe/show/'+${recipe.id}}">View</a> </td>
+                                    <td><a href="#" th:href="@{'/recipe/'+${recipe.id}+'/show'}">View</a> </td>
+                                    <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/update'}">Update</a></td>
                                 </tr>
                             </table>
                         </div>
