--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -49,7 +49,7 @@
                             </div>
                             <div class="col-md-6">
                                 <img src="../../static/images/recipe1.jpg"
-                                     th:src="@{/images/recipe1.jpg}"
+                                     th:src="@{'/recipe/'+${recipe.id}+'/recipeImage'}"
                                      width="200" height="200">
                             </div>
                         </div>
